# pathivu

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pathivu/: __init__.py  __main__.py  core.py  deps.py  git.py  pkg.py  read.py
src/pathivu/frameworks/: __init__.py  fastapi.py  flask.py
tests/: conftest.py  test_cli.py  test_core.py  test_deps.py  test_frameworks.py  test_git.py  test_pkg.py  test_read.py
